--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <!-- Icon for browser -->
     <link rel="icon" type="image/png" href="favicon.png">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128628216-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-128628216-1');
+    </script>
+
   </head>
 
   <body id="page-top">
