--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Developer Trainee</h3>
+              <div class="subheading mb-3">Electria - Metropolia University of Applied Science's R&D unit</div>
+              <p>Electria is the Research and Development unit of Metropolia. Electria along with Turbiini startup accelerator hosts an XR unit at Metropoli's Arabian campus. They recently decided to start working on AR projects and I am working with the AR team. As of yet, we are working with Google ARCore and using Unity for development.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2018 - Present</span>
+            </div>
+          </div>
+
+		  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Marketing Trainee</h3>
               <div class="subheading mb-3">Ikoniac Oy</div>
               <p>Ikoniac Oy is a Turku, Finland based games developer startup firm founded in November 2014. Back when I joined, the team was working on releasing its first game - a story based puzzle game called ,<a href="https://play.google.com/store/apps/details?id=com.Ikoniac.Galaxy25">Galactic Echoes</a>. 
@@ -201,10 +212,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Business College, Helsinki</h3>
               <div class="subheading mb-3">Vocational Qualification of Information and Communications Technology</div>
-              <div>Fullstack JavaScript React Software Development</div>
+              <div>The course is focused on Fullstack JavaScript React Software Development</div>
+			  <p>I already started my on the job training section of the degree which requires working as a developer with a team for 5 months.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2018 - July 2019 (Expected)</span>
+              <span class="text-primary">January 2018 - March 2019 (Expected)</span>
             </div>
           </div>
 
@@ -261,6 +273,12 @@
             <li class="list-inline-item">
               <i class="fab fa-laravel"></i>
             </li>
+			<li class="list-inline-item">
+              <img class="custom_logo" src="img/csharplogo.png"/ style="height: 52px">
+            </li>
+			<li class="list-inline-item">
+              <img class="custom_logo" src="img/unitylogo.png"/ style="height: 95px">
+            </li>
           </ul>
 
           <div class="subheading mb-3">Soft Skills</div>
@@ -298,6 +316,7 @@
           <p>I am a <b>tech gadget geek</b>. Tech hardware videos are my most watched videos on YouTube. My interests in tech gadgets were the main reason I was hired at Maxwell Direct.</p>
           <p>I am an <b>avid gamer</b>. I cannot remember at least one whole week in my life when I was not playing some videogame so far in my life regardless of the device medium. I am on a hiatus from playing Fifa Mobile where I am one of the admins of a top 30 league called Minnesota Divided FC.</p>
           <p>I am a <b>positivist</b> which is why I also often enjoy watching and talking about motivational philosophies. Rhonda Byrne's <i><b>The Secret</b></i> &amp; <i><b>The Power</b></i> are one of my biggest influences.</p>
+          <p>I am not a movie  buff but have a few favorites such as <a href="https://en.wikipedia.org/wiki/The_Pursuit_of_Happyness"><b>The Pursuit of Happyness</b></a></p>
           <p>I enjoy working out even though I sadly haven't been able to do so on a regular basis lately due to tight work and class schedule. Having poor metabolism genetically, I always struggled to keep my weight low without working out. Howeve, I once lost 30 kgs within 4 months while raising muscle mass at the same time.</p>
         </div>
       </section>
