Changed intro, current job title and added c# cert

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="subheading mb-5">Helsinki · Finland · <a href="tel:+3584578722133">(358) 45 787 22 133</a> ·
             <a href="mailto:mojjammil@gmail.com">mojjammil@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am a Marketing Researcher turned Fullstack Web Developer in training. My past experiences naturally allows me to be strong at front-end development. However, I personally am eager to learn and explore back-end development more during my on-the-job training.</p>
+          <p class="lead mb-5">I am a Marketing Researcher turned Fullstack Web Developer in training. My past experiences naturally allows me to be strong at front-end development. However, I am interested in becoming a full-stack software developer in the long run. </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/mojjammil/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
@@ -108,9 +108,9 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Developer Trainee</h3>
+              <h3 class="mb-0">Software Developer Trainee</h3>
               <div class="subheading mb-3">Electria - Metropolia University of Applied Science's R&D unit</div>
-              <p>Electria is the Research and Development unit of Metropolia. Electria along with Turbiini startup accelerator hosts an XR unit at Metropoli's Arabian campus. They recently decided to start working on AR projects and I am working with the AR team. As of yet, we are working with Google ARCore and using Unity for development.</p>
+              <p>Electria is the Research and Development unit of Metropolia. Electria along with Turbiini startup accelerator hosts an XR unit at Metropoli's Arabian campus. They recently decided to start working on AR projects and I am working with the AR development team. As of yet, we are working with Google ARCore and using Unity for development.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2018 - Present</span>
@@ -121,7 +121,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Marketing Trainee</h3>
               <div class="subheading mb-3">Ikoniac Oy</div>
-              <p>Ikoniac Oy is a Turku, Finland based games developer startup firm founded in November 2014. Back when I joined, the team was working on releasing its first game - a story based puzzle game called ,<a href="https://play.google.com/store/apps/details?id=com.Ikoniac.Galaxy25">Galactic Echoes</a>. 
+              <p>Ikoniac Oy is a Turku, Finland based games developer startup firm founded in November 2014. Back when I joined, the team was working on releasing its first game - a story based puzzle game called, <a href="https://play.google.com/store/apps/details?id=com.Ikoniac.Galaxy25">Galactic Echoes</a>.
                 Being an innovation development student and a marketing professional, my job along with the other trainees and the marketing manager was to develop solid marketing campaign and executing the ideas.
                 Starting from story elements, characters to user interface and game features, the product development trainees were encouraged to contribute however they can proactively.</p>
             </div>
@@ -366,6 +366,10 @@
                   <i class="fa-li fa fa-file-alt text-warning"></i>
                   <a href="https://www.sololearn.com/Certificate/1024-2147823/pdf/" target="_blank"><u><b>JavaScript Tutorials Course</b></u></a> - Provided by SoloLearn
                </li>
+		<li>
+                  <i class="fa-li fa fa-file-alt text-warning"></i>
+                  <a href="https://www.sololearn.com/Certificate/1080-2147823/pdf/" target="_blank"><u><b>C# Tutorials Course</b></u></a> - Provided by SoloLearn
+               </li> 
           </ul>
         </div>
       </section>
