Updated intro with 100 days of code challenge info

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <a href="mailto:mojjammil@gmail.com">mojjammil@gmail.com</a>
           </div>
           <p class="lead mb-5">I am a Marketing Researcher turned Fullstack Web Developer in training. My past experiences naturally allows me to be strong at front-end development. However, I am interested in becoming a full-stack software developer in the long run. </p>
+	  <p class="lead mb-5">I am currently commited to the <a href="https://www.100daysofcode.com/">#100DaysOfCode</a> challenge. I post my daily updates on Twitter: <a href="https://twitter.com/TanzilCodes">@TanzilCodes</a></p>
+		
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/mojjammil/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
