Fixed typo and updated intro

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <div class="subheading mb-5">Helsinki · Finland · <a href="tel:+3584578722133">(358) 45 787 22 133</a> ·
             <a href="mailto:mojjammil@gmail.com">mojjammil@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am a Marketing professional turned Fullstack Software Developer in training. My past experiences naturally allows me to be strong at front-end development. However, I am interested in finding opportunities where I can combine my skills and experience as a marketing professional and software development. </p>
-	  <p class="lead mb-5">I am currently commited to the <a href="https://www.100daysofcode.com/">#100DaysOfCode</a> challenge. I post my daily updates on Twitter: <a href="https://twitter.com/TanzilCodes">@TanzilCodes</a></p>
+          <p class="lead mb-5">I am a novice software developer and brand management enthusiast with 3 years of professional marketing research experience. I am currently working towards building a solid foundation of becoming a competent programmer. My previous experience allows me to connect the dots between user data and illustrate customer insights, which is why I am also interested in Data Science in the future. </p>
+	  <p class="lead mb-5">I am currently committed to the <a href="https://www.100daysofcode.com/" target="_blank">#100DaysOfCode</a> challenge. I post my daily updates on Twitter: <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd" target="_blank">@TanzilCodes</a></p>
 		
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mojjammil/" target="_blank" tooltip="LinkedIn" tooltip-position="bottom">
@@ -122,7 +122,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer Trainee</h3>
               <div class="subheading mb-3">Electria - Metropolia University of Applied Science's R&D unit</div>
-              <p>Electria is the Research and Development unit of Metropolia. Electria along with Turbiini startup accelerator hosts an XR unit at Metropoli's Arabian campus. They recently decided to start working on AR projects and I am working with the AR development team. As of yet, we are working with Google ARCore and using Unity for development.</p>
+              <p>Electria is the Research and Development unit of Metropolia. Electria along with Turbiini startup accelerator works actively with Helsink XR centre. They recently decided to start working on AR projects and I am working with the AR development team. As of yet, we are working with Google ARCore and using Unity for apps development.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2018 - Present</span>
@@ -133,9 +133,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Marketing Trainee</h3>
               <div class="subheading mb-3">Ikoniac Oy</div>
-              <p>Ikoniac Oy is a Turku, Finland based games developer startup firm founded in November 2014. Back when I joined, the team was working on releasing its first game - a story based puzzle game called, <a href="https://play.google.com/store/apps/details?id=com.Ikoniac.Galaxy25">Galactic Echoes</a>.
-                Being an innovation development student and a marketing professional, my job along with the other trainees and the marketing manager was to develop solid marketing campaign and executing the ideas.
-                Starting from story elements, characters to user interface and game features, the product development trainees were encouraged to contribute however they can proactively.</p>
+              <p>Ikoniac Oy is a Turku, Finland based games developer startup firm founded in November 2014. Back when I joined, the team was working on releasing its first game - a story based puzzle game called <a href="https://play.google.com/store/apps/details?id=com.Ikoniac.Galaxy25" target="_blank">Galactic Echoes</a>.
+                Being an innovation development student and a marketing professional, I worked with the marketing team to develop a solid marketing campaign and executing the ideas.
+                I also contributed in the product development starting from sharing ideas for story elements, characters, user interface and game features.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2015 - February 2016</span>
@@ -146,12 +146,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Marketing Research &amp; Product Analyst</h3>
               <div class="subheading mb-3">Funtastic Labs</div>
-              <p>Headed by couple of former Playdom – Disney Associate Producer and Engineer, Funtastic Labs is a gaming studio that builds games across platforms including facebook, iOS and android, and provides ICT training.
+              <p>Headed by couple of former Playdom – Disney Associate Producer and Engineers, Funtastic Labs is a gaming studio that builds games across platforms including facebook, iOS and android, and provides ICT training.
 
-                As a part-time consultancy job, primarily my contributions to this startup labs were:
-                -	Analyze market viability of products and services
-                -	Propose marketing strategies based on customer segmentation and target market analysis
-                -	Supervise the product development, UI, UX and business development of a still work in progress, Kinect gesture based promotional – advertisement and marketing research device.</p>
+                As it was a part-time consultancy job, primarily my contributions to this startup was to:
+                <ul>
+                  <li>Analyze market viability of products and services</li>
+                  <li>Propose marketing strategies based on customer segmentation and target market analysis</li>
+                  <li>Supervise the product development, UI, UX and business development of a still work in progress, Kinect gesture based promotional – advertisement and marketing research device.</li>
+                </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2013 - August 2015</span>
@@ -288,9 +290,10 @@
               
             </div>
             
-          </div><!-- container -->
+          </div> 
+          container -->
 
-      </section> -->
+      </section>
 
       <hr class="m-0">
 
@@ -315,7 +318,7 @@
               <h3 class="mb-0">North South University</h3>
               <div class="subheading mb-3">Bachelor of Business Administration</div>
               <div>Major in Marketing &amp; Finance</div>
-              <p>GPA: 3.52</p>
+              <p>Graduated with Cum Laude distinction</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2002 - May 2006</span>
@@ -379,6 +382,10 @@
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
+              Problem solver
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
               Dynamic team player
             </li>
             <li>
@@ -406,7 +413,7 @@
           <p>I am a <b>tech gadget geek</b>. Tech hardware videos are my most watched videos on YouTube. My interests in tech gadgets were the main reason I was hired at Maxwell Direct.</p>
           <p>I am an <b>avid gamer</b>. I cannot remember at least one whole week in my life when I was not playing some videogame so far in my life regardless of the device medium. I am on a hiatus from playing Fifa Mobile where I am one of the admins of a top 30 league called Minnesota Divided FC.</p>
           <p>I am a <b>positivist</b> which is why I also often enjoy watching and talking about motivational philosophies. Rhonda Byrne's <i><b>The Secret</b></i> &amp; <i><b>The Power</b></i> are one of my biggest influences.</p>
-          <p>I am not a movie  buff but have a few favorites such as <a href="https://en.wikipedia.org/wiki/The_Pursuit_of_Happyness"><b>The Pursuit of Happyness</b></a></p>
+          <p>I am not a movie  buff but have a few favorites such as <a href="https://en.wikipedia.org/wiki/The_Pursuit_of_Happyness" target="_blank"><b>The Pursuit of Happyness.</b></a></p>
           <p>I enjoy working out even though I sadly haven't been able to do so on a regular basis lately due to tight work and class schedule. Having poor metabolism genetically, I always struggled to keep my weight low without working out. Howeve, I once lost 30 kgs within 4 months while raising muscle mass at the same time.</p>
         </div>
       </section>
@@ -423,7 +430,7 @@
             </li>
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <b>Champion of Intra-NSU Ad Maker'11</b> - An advertisement competition held within North South University to pick teams to represent in the national compeition
+                <b>Champion of Intra-NSU Ad Maker'11</b> - An advertisement competition held within North South University to pick teams to represent in the national competition
             </li>
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
@@ -439,7 +446,7 @@
             </li>
             <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
-                <b>2<sup>nd</sup> in Banglalion Ad Maker'10</b> - An advertisement competition held within North South University to pick teams to represent in the national compeition
+                <b>2<sup>nd</sup> in Banglalion Ad Maker'10</b> - An advertisement competition held within North South University to pick teams to represent in the national competition
             </li>
           </ul>
           <p></p>
