Added JavaScript 30 update

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <p class="lead mb-5">I am a novice software developer currently working towards building a solid foundation of
           becoming a competent programmer. My previous experience allows me to connect the dots between user data and
           illustrate customer insights, which is why I am also interested in Data Science in the future. </p>
-        <p class="lead mb-5">I am currently committed to the <a href="https://www.100daysofcode.com/" target="_blank">#100DaysOfCode</a>
-          challenge. I post my daily updates on Twitter: <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
+        <p class="lead mb-5">I am currently committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd" target="_blank">#100DaysOfCode</a>
+          challenge and <a href="https://twitter.com/search?q=%23JavaScript30%20%40TanzilCodes&src=typd" target="_blank">#JavaScript30</a>. I post my daily updates on Twitter: <a href="https://twitter.com/TanzilCodes/"
             target="_blank">@TanzilCodes</a></p>
 
         <div class="social-icons">
