Updated creathon website

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         <h2 class="mb-5">Portfolio</h2>
         <div id="myBtnContainer">
           <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+          <button class="btn" onclick="filterSelection('webdev')"> Web Development</button>
           <button class="btn" onclick="filterSelection('javascript')"> JavaScript</button>
           <button class="btn" onclick="filterSelection('unity')"> Unity</button>
           <button class="btn" onclick="filterSelection('ar')"> Augmented Reality(AR)</button>
@@ -171,6 +172,15 @@
 
         <!-- Portfolio Gallery Grid -->
         <div class="row">
+            <div class="column webdev">
+                <div class="content">
+                  <a href="https://creathon.metropolia.fi" target="_blank">
+                    <img src="/img/creathon.PNG" alt="Creathon's Website" class="gallery-thumbnail">
+                  </a>
+                  <h4>Creathon's Website</h4>
+                  <p>Creathon is an EU funded initiative in collaboration with few University of Applied Sciences in Finland to encourage building technology focused creative projects.</p>
+                </div>
+              </div>
           <div class="column javascript">
             <div class="content">
               <a href="https://mojjammil.github.io/Rock-paper-scissors/" target="_blank">
