fixed image name typo

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="column webdev">
                 <div class="content">
                   <a href="https://creathon.metropolia.fi" target="_blank">
-                    <img src="/img/creathon.PNG" alt="Creathon's Website" class="gallery-thumbnail">
+                    <img src="/img/creathon.png" alt="Creathon's Website" class="gallery-thumbnail">
                   </a>
                   <h4>Creathon's Website</h4>
                   <p>Creathon is an EU funded initiative in collaboration with few University of Applied Sciences in Finland to encourage building technology focused creative projects.</p>
