Fixed typo in Interests section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             target="_blank"><b>The Pursuit of Happyness.</b></a></p>
         <p>I enjoy working out even though I sadly haven't been able to do so on a regular basis lately due to tight
           work and class schedule. Having poor metabolism genetically, I always struggled to keep my weight low without
-          working out. Howeve, I once lost 30 kgs within 4 months while raising muscle mass at the same time.</p>
+          working out. However, I once lost 30 kgs within 4 months while raising muscle mass at the same time.</p>
       </div>
     </section>
 
