updated overall with latest info

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
         <p class="lead mb-5">I am a novice software developer currently working towards building a solid foundation of
           becoming a competent programmer. My previous experience allows me to connect the dots between user data and
           illustrate customer insights, which is why I am also interested in Data Science in the future. </p>
-        <p class="lead mb-5">I am currently committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd" target="_blank">#100DaysOfCode</a>
-          challenge and <a href="https://twitter.com/search?q=%23JavaScript30%20%40TanzilCodes&src=typd" target="_blank">#JavaScript30</a>. I post my daily updates on Twitter: <a href="https://twitter.com/TanzilCodes/"
-            target="_blank">@TanzilCodes</a></p>
+        <p class="lead mb-5">I am currently committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
+            target="_blank">#100DaysOfCode</a>, <a href="https://twitter.com/search?q=%40tanzilcodes%20%23301daysofcode&src=typd"
+            target="_blank">#301DaysOfCode</a>
+          challenges and <a href="https://twitter.com/search?q=%23JavaScript30%20%40TanzilCodes&src=typd" target="_blank">#JavaScript30</a>.
+          I post my daily updates on Twitter: <a href="https://twitter.com/TanzilCodes/" target="_blank">@TanzilCodes</a></p>
 
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mojjammil/" target="_blank" tooltip="LinkedIn" tooltip-position="bottom">
@@ -121,17 +123,35 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-2">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Software Developer Trainee</h3>
+            <h3 class="mb-1">Software Developer Trainee</h3>
             <div class="subheading mb-3">Electria - Metropolia University of Applied Science's R&D unit</div>
-            <p>Electria is the Research and Development unit of Metropolia. Electria along with Turbiini startup
-              accelerator works actively with Helsink XR centre. They recently decided to start working on AR projects
-              and I am working with the AR development team. As of yet, we are working with Google ARCore and using
-              Unity for apps development.</p>
+            <p class="mb-2">Electria is Metropolia AMK's R&D unit.<br>
+              I will be primarily working on Electria's XR projects along with couple of website development projects.
+              Technologies that I'll be using here primarily are:<br class="mb-2">
+
+              <div class="subheading mb-1">Projects</div>
+              <ul class="fa-ul">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Creathon's (EU sponsored project) <a href="https://creathon.metropolia.fi" target="_blank"><b>website</a></b>:
+                  WordPress, CSS, HTML, PHP, MySQL
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Helsinki XR Center website (In progress): WordPress, CSS, HTML, PHP, MySQL
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Experimental AR apps (A few in <a href=#portfolio><b>portfolio section</a></b>):
+                  Unity3D, Google ARCore
+                </li>
+              </ul>
           </div>
+
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2018 - Present</span>
           </div>
@@ -139,7 +159,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Freelance Cleaner and Housekeeper, and Restaurant Worker</h3>
+            <h3 class="mb-0">Freelance Cleaner-Housekeeper, and Restaurant Worker</h3>
             <div class="subheading mb-3">Royal Curry House Oy · Delicious Point Oy ·Popula Oy· Pro Duo Oy· InHouse
               Partners Oy</div>
             <p>After moving to Finland, due to not knowing Finnish language properly, I couldn't manage a part-time job
@@ -172,15 +192,16 @@
 
         <!-- Portfolio Gallery Grid -->
         <div class="row">
-            <div class="column webdev">
-                <div class="content">
-                  <a href="https://creathon.metropolia.fi" target="_blank">
-                    <img src="/img/creathon.png" alt="Creathon's Website" class="gallery-thumbnail">
-                  </a>
-                  <h4>Creathon's Website</h4>
-                  <p>Creathon is an EU funded initiative in collaboration with few University of Applied Sciences in Finland to encourage building technology focused creative projects.</p>
-                </div>
-              </div>
+          <div class="column webdev">
+            <div class="content">
+              <a href="https://creathon.metropolia.fi" target="_blank">
+                <img src="/img/creathon.png" alt="Creathon's Website" class="gallery-thumbnail">
+              </a>
+              <h4>Creathon's Website</h4>
+              <p>Creathon is an EU funded initiative in collaboration with few University of Applied Sciences in
+                Finland to encourage building technology focused creative projects.</p>
+            </div>
+          </div>
           <div class="column javascript">
             <div class="content">
               <a href="https://mojjammil.github.io/Rock-paper-scissors/" target="_blank">
@@ -252,13 +273,12 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Business College, Helsinki</h3>
-            <div class="subheading mb-3">Vocational Qualification of Information and Communications Technology</div>
-            <div>The course is focused on Fullstack JavaScript React Software Development.</div>
-            <p>I already started my on the job training section of the degree which requires working as a developer
-              with a team for 5 months.</p>
+            <div class="subheading mb-3">Vocational Qualification of Information and Communications Technology (QIT)</div>
+            <div>The course was focused on Fullstack JavaScript React Software Development.</div>
+            <p>I graduated with a 5/5 grade on all study modules of the competence demonstration.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2018 - March 2019 (Expected)</span>
+            <span class="text-primary">January 2018 - March 2019</span>
           </div>
         </div>
     </section>
@@ -287,6 +307,9 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node"></i>
@@ -396,7 +419,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
-        <h2 class="mb-5">Interests</h2>
+        <h2 class="mb-1">Interests</h2>
         <p>Apart from learning web development, I enjoy brainstorming brand management, business development and
           promotional ideas subconsciously when I am travelling or not literally engaged doing something. Being a
           business graduate, I am also always interested in <b>brainstorming potential business ideas.</b></p>
@@ -410,6 +433,10 @@
           influences.</p>
         <p>I am not a movie buff but have a few favorites such as <a href="https://en.wikipedia.org/wiki/The_Pursuit_of_Happyness"
             target="_blank"><b>The Pursuit of Happyness.</b></a></p>
+        <p>Also, being a techie, I can't help but consider <b><a href="https://www.imdb.com/title/tt4158110/" target="_blank">Mr.
+              Robot</a></b>, <b><a href="https://www.imdb.com/title/tt2575988/?ref_=fn_al_tt_1" target="_blank">HBO's
+              Silicon Valley</a></b>, and <b><a href="https://www.imdb.com/title/tt2543312/?ref_=nv_sr_1" target="_blank">Halt
+              and Catch Fire</a></b> to be one of my most favorite TV shows as well.</p>
         <p>I enjoy working out even though I sadly haven't been able to do so on a regular basis lately due to tight
           work and class schedule. Having poor metabolism genetically, I always struggled to keep my weight low without
           working out. However, I once lost 30 kgs within 4 months while raising muscle mass at the same time.</p>
