Added Python 3 certificate

--- a/index.html
+++ b/index.html
@@ -404,6 +404,11 @@
               tooltip-position="right"><u><b>JavaScript Tutorials Course</b></u></a> - Provided by SoloLearn
           </li>
           <li>
+              <i class="fa-li fa fa-file-alt text-warning"></i>
+              <a href="https://www.sololearn.com/Certificate/1073-2147823/pdf/" target="_blank" tooltip="Click link to see certificate"
+                tooltip-position="right"><u><b>Python 3 Tutorials Course</b></u></a> - Provided by SoloLearn
+            </li>
+          <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
             <a href="https://www.sololearn.com/Certificate/1080-2147823/pdf/" target="_blank" tooltip="Click link to see certificate"
               tooltip-position="right"><u><b>C# Tutorials Course</b></u></a> - Provided by SoloLearn
