Added Brandwitz award

--- a/index.html
+++ b/index.html
@@ -376,6 +376,10 @@
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            <b>Brandwitz'10 Champion</b> - Our team was the champion of one of the largest national level brand management competitions
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             <b>Winner of Radio Foorti Marketing Guru compeition</b> - Winners were invited to a Philip Kotler event
           </li>
         </ul>
