Linked QIT certificate in Education and Awards section

--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@
             <h3 class="mb-0">Business College, Helsinki</h3>
             <div class="subheading mb-3">Vocational Qualification of Information and Communications Technology (QIT)</div>
             <div>The course was focused on Fullstack JavaScript React Software Development.</div>
-            <p>I graduated with a 5/5 grade on all study modules of the competence demonstration.</p>
+            <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank" tooltip="Click link to see certificate"
+               tooltip-position="top"><u><b>The certificate can be viewed from here.</b></u></a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 - March 2019</span>
@@ -385,6 +386,11 @@
         </ul>
         <br>
         <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-file-alt text-warning"></i>
+            <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank" tooltip="Click link to see certificate"
+               tooltip-position="top"><u><b>QIT Vocation Upper Secondary Certificate</b></u></a>
+          </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
             <a href="https://drive.google.com/open?id=0B1XoGhdwqoErYWUzSWM4M29RcFE" target="_blank" tooltip="Click link to see certificate"
