Fixed typo 'vocation'

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
             <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank" tooltip="Click link to see certificate"
-               tooltip-position="top"><u><b>QIT Vocation Upper Secondary Certificate</b></u></a>
+               tooltip-position="top"><u><b>QIT Vocational Upper Secondary Certificate</b></u></a>
           </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
