Added new position and smaller changes

--- a/index.html
+++ b/index.html
@@ -97,12 +97,10 @@
         <p class="lead mb-5">I am a novice software developer currently working towards building a solid foundation of
           becoming a competent programmer. My previous experience allows me to connect the dots between user data and
           illustrate customer insights, which is why I am also interested in Data Science in the future. </p>
-        <p class="lead mb-5">I am currently committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
-            target="_blank">#100DaysOfCode</a>, <a href="https://twitter.com/search?q=%40tanzilcodes%20%23301daysofcode&src=typd"
+        <p class="lead mb-5">I committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
+            target="_blank">#100DaysOfCode</a> and <a href="https://twitter.com/search?q=%40tanzilcodes%20%23301daysofcode&src=typd"
             target="_blank">#301DaysOfCode</a>
-          challenges and <a href="https://twitter.com/search?q=%23JavaScript30%20%40TanzilCodes&src=typd" target="_blank">#JavaScript30</a>.
-          I post my daily updates on Twitter: <a href="https://twitter.com/TanzilCodes/" target="_blank">@TanzilCodes</a></p>
-
+          challenges.
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mojjammil/" target="_blank" tooltip="LinkedIn" tooltip-position="bottom">
             <p class="fab fa-linkedin-in"></p>
@@ -125,13 +123,40 @@
       <div class="my-auto">
         <h2 class="mb-2">Experience</h2>
 
+    <!-- Beginning of position section -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-1">Software Developer</h3>
+            <div class="subheading mb-3">Snapplication Oy</div>
+            <p class="mb-2">Snapplication Oy specializes in developing PWA for local tourist areas. Currently Lappeenranta City is the client.<br>
+              I primarily worked on understanding the product and front-end using Angular. 
+              I am also working on publishing the PWA on iOS alongside working with many design and promotional materials.
+              <br class="mb-2">
+
+              <div class="subheading mb-1">Projects</div>
+              <ul class="fa-ul">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  <a href="https://www.localapp.fi/language/en/home-2/">Lappeenranta Local App</a>:
+                  Angular, iOS app publishing
+                </li>
+              </ul>
+          </div>
+
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - Present</span>
+          </div>
+        </div>
+
+        <!-- End of position section -->
+
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-1">Software Developer Trainee</h3>
             <div class="subheading mb-3">Electria - Metropolia University of Applied Science's R&D unit</div>
             <p class="mb-2">Electria is Metropolia AMK's R&D unit.<br>
-              I will be primarily working on Electria's XR projects along with couple of website development projects.
-              Technologies that I'll be using here primarily are:<br class="mb-2">
+              I primarily worked on Electria's XR projects along with couple of website development projects.
+              <br class="mb-2">
 
               <div class="subheading mb-1">Projects</div>
               <ul class="fa-ul">
@@ -153,7 +178,7 @@
           </div>
 
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2018 - Present</span>
+            <span class="text-primary">November 2018 - April 2019</span>
           </div>
         </div>
 
