Added Tech Lead position

--- a/index.html
+++ b/index.html
@@ -124,6 +124,25 @@
         <h2 class="mb-2">Experience</h2>
 
     <!-- Beginning of position section -->
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+        <h3 class="mb-1">Tech Lead</h3>
+        <div class="subheading mb-3">The Shortcut</div>
+        <p class="mb-2">The Shortcut is a talent accelerator with the goal to help people improve their skills and acquire new ones in order to enter the tech world by either creating a startup or joining one. 
+          It is a non-profit organization part of Startup Foundation sr. and a sister organization to Slush, Maria 01, Wave Ventures and Junction.<br>
+          I am primarily responsible for managing all the tech products, projects, trainings and leading the tech team. I am also involved with the data team working on building and managing data management tool.
+          <br class="mb-2">
+
+      </div>
+
+      <div class="resume-date text-md-right">
+        <span class="text-primary">August 2019 - Present</span>
+      </div>
+    </div>
+
+    <!-- End of position section -->
+
+    <!-- Beginning of position section -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-1">Software Developer</h3>
@@ -179,21 +198,6 @@
 
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2018 - April 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Freelance Cleaner-Housekeeper, and Restaurant Worker</h3>
-            <div class="subheading mb-3">Royal Curry House Oy · Delicious Point Oy ·Popula Oy· Pro Duo Oy· InHouse
-              Partners Oy</div>
-            <p>After moving to Finland, due to not knowing Finnish language properly, I couldn't manage a part-time job
-              in Marketing and Marketing Research to support my family's living expenses while I was completing my
-              studies. Hence, I started working as at first a waiter, then cook and currently cleaner and housekeeper.</p>
-
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2015 - Present</span>
           </div>
         </div>
 
