Added and fixed hyperlinks

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="resume-content mr-auto">
         <h3 class="mb-1">Tech Lead</h3>
         <div class="subheading mb-3">The Shortcut</div>
-        <p class="mb-2">The Shortcut is a talent accelerator with the goal to help people improve their skills and acquire new ones in order to enter the tech world by either creating a startup or joining one. 
+        <p class="mb-2"><a href="https://theshortcut.org/" target="_blank">The Shortcut</a> is a talent accelerator with the goal to help people improve their skills and acquire new ones in order to enter the tech world by either creating a startup or joining one. 
           It is a non-profit organization part of Startup Foundation sr. and a sister organization to Slush, Maria 01, Wave Ventures and Junction.<br>
           I am primarily responsible for managing all the tech products, projects, trainings and leading the tech team. I am also involved with the data team working on building and managing data management tool.
           <br class="mb-2">
@@ -156,7 +156,7 @@
               <ul class="fa-ul">
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  <a href="https://www.localapp.fi/language/en/home-2/">Lappeenranta Local App</a>:
+                  <a href="https://www.localapp.fi/language/en/home-2/" target="_blank">Lappeenranta Local App</a>:
                   Angular, iOS app publishing
                 </li>
               </ul>
